# magex

./: .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE.txt  README.md  install-gtest.sh
src/: CMakeLists.txt  dfa.cc  dfa.h  nfa.cc  nfa.h  parse.h  precedence_parser.cc
tests/: CMakeLists.txt  dfa.cc  nfa.cc  parse.cc
